# kodeec

./: .gitignore  README.md
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.sample  Dockerfile  app.py  config.py  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
backend/.docker-compose/: base.yml  production.yml
backend/.env.sample/: .env.base  .env.production
backend/api/models/: models.py
backend/api/schemas/: user_schemas.py
backend/api/tests/: user_tests.py
backend/api/urls/: user_urls.py
backend/api/views/: user_views.py
backend/src/: app.py
infrastructure/: .backend.hcl.sample  .secrets.auto.tfvars.sample  azure.tf  github.tf  main.tf
infrastructure/modules/azure/: blob_storage.tf  container_registry.tf  main.tf  postgres_database.tf  virtual_machine.tf  virtual_network.tf
infrastructure/modules/github/: main.tf
scripts/: get_infra_output.py
