[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend API"
authors = ["Mustafa Abdallah <mustafa.abdulluh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
