[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend API"
authors = ["Mustafa Abdallah <mustafa.abdulluh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
python-dotenv = "^0.21.0"
flask-migrate = "^4.0.0"
flask-sqlalchemy = "^3.0.2"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
marshmallow = "^3.19.0"
flask-restful = "^0.3.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-flask = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
